FIXED numberLine ISSUE now screenshots is showing correctly with number line aligned with correct code

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,9 +27,7 @@ h1, h2 {
     font-size: 16px;
 }
 
-.NEWeditor .cm-gutterElement {
-    display: none;
-}
+
 button {
     background-color: #4a4a88;
     color: white;
